# demo-cpp

./: CMakeLists.txt
hkni/: Environment.h  Interpreter.h  InterpreterTest.cpp  Lexer.h  LexerTest.cpp  Parser.h  ParserTest.cpp  Precedence.h  Token.h  lexer_test.txt  readme.md  test_code.txt
hkni/ast/: AssignExpression.h  Expression.h  ExpressionStatement.h  FloatExpression.h  IdentifierExpression.h  IntExpression.h  Node.h  Precedence.h  Program.h  Statement.h  StringExpression.h  VarStatement.h
hkni/exp/: AssignExpression.h  BoolExpression.h  CallExpression.h  DotExp.h  FloatExpression.h  ForExpression.h  FuncExpression.h  IdentifierExpression.h  IfExpression.h  IndexExp.h  InfixExpression.h  IntExpression.h  NullExpression.h  PrefixExpression.h  StringExpression.h  SuffixExpression.h
hkni/expression/: AssignExp.h  AssignExpression.h  BoolExp.h  BoolExpression.h  CallExp.h  CallExpression.h  DotExp.h  FloatExp.h  FloatExpression.h  ForExp.h  ForExpression.h  FuncExp.h  FuncExpression.h  IdentifierExp.h  IdentifierExpression.h  IfExp.h  IfExpression.h  IndexExp.h  InfixExp.h  InfixExpression.h  IntExp.h  IntExpression.h  MapExp.h  NewExp.h  NullExp.h  NullExpression.h  PrefixExp.h  PrefixExpression.h  StringExp.h  StringExpression.h  StructExp.h  StructExpression.h  StructField.h  SuffixExpression.h  TypeExp.h  TypeExpression.h
hkni/func/: BuiltinFunc.h  PrintlnFunc.h
hkni/function/: BuiltinFunc.h  BuiltinFunction.h  PrintlnFunc.h  PrintlnFunction.h
hkni/interpreter/: DsItpt.cpp  DtItpt.cpp  StmtItpt.cpp
hkni/object/: BoolObj.h  BoolObject.h  ErrorObj.h  (+16 more)
(+12 files in other folders)
